[package]
name = "booster"
# Keep versions in Cargo.toml and py/setup.py synchronized.
version = "0.3.0"
resolver = "2"
authors = [
	"Ryan Summers <ryan.summers@vertigo-designs.com>",
	"Robert Jördens <rj@quartiq.de>",
]
description = "Firmware for the Sinara Booster device (STM32F4, Ethernet, RF power amplifiers)"
categories = ["embedded", "no-std", "hardware-support", "science"]
license = "MIT OR Apache-2.0"
keywords = ["ethernet", "stm32f4", "adc", "physics"]
repository = "https://github.com/quartiq/booster"
readme = "README.md"
documentation = "https://quartiq.de/booster-doc/"
edition = "2018"
# keep MSRV in sync in ci.yaml, Cargo.toml
rust-version = "1.65"
build = "build.rs"
exclude = [
	".gitignore",
	"book/",
	"book/*"
]

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7"
cortex-m-rtic = "1.1"
mono-clock = "0.1"
systick-monotonic = "1.0.1"
cortex-m-log = { version = "0.8.0", features = ["log-integration"] }
log = "0.4.17"
heapless = { version = "0.7", features = ["serde"] }
bit_field = "0.10.2"
debounced-pin = "0.3.0"
serde = {version = "1.0", features = ["derive"], default-features = false }
logos = { version = "0.12.1", default-features = false, features = ["export_derive"] }
rtt-logger = "0.2"
bbqueue = "0.5"
usbd-serial = "0.1.0"
shared-bus = { version = "0.2", features = ["cortex-m"] }
usb-device = "0.2.9"
encdec = { version = "0.8", default-features = false }
crc-any = { version = "2.4.3", default-features = false }
panic-persist = { version = "0.3", features = ["custom-panic-handler", "utf8"] }
smoltcp-nal = { version = "0.2" }
miniconf = { version = "0.6", features = ["mqtt-client"]}
minimq = "0.6"
w5500 = { version = "0.4.1", optional = true }
smlang= "0.6"
minireq = "0.1.1"
rtt-target = {version = "0.3", features=["cortex-m"]}
enum-iterator = { version = "1.4", default-features = false }

[build-dependencies]
built = { version = "0.6", features = ["git2"], default-features = false }

[dependencies.stm32f4xx-hal]
version = "0.15"
features = ["stm32f407", "rt", "usb_fs"]

[dependencies.enc424j600]
git = "https://git.m-labs.hk/M-Labs/ENC424J600.git"
rev = "fbcc3778d27cfbeec7a1395c9b13a00c8a26af9a"
features = [ "cortex-m-cpu" ]
optional = true

[dependencies.ad5627]
path = "ad5627"

[dependencies.ads7924]
path = "ads7924"

[dependencies.dac7571]
path = "dac7571"

[dependencies.max6639]
path = "max6639"

[dependencies.max6642]
path = "max6642"

[dependencies.mcp3221]
path = "mcp3221"

[dependencies.microchip-24aa02e48]
path = "microchip-24aa02e48"

[dependencies.tca9548]
path = "tca9548"

[features]
phy_w5500 = [ "w5500" ]
phy_enc424j600 = [ "enc424j600" ]
default = [ "phy_w5500" ]

[profile.dev]
# Note: Opt-level 1 is required to avoid issues with stack overflow during hardware configuration.
opt-level = 1

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
