[package]
name = "ad5627"
version = "0.1.0"
authors = ["Ryan Summers <ryan.summers@vertigo-designs.com>"]
edition = "2018"
description = "no_std driver for the AD5627 2-channel digital-to-analog converter (DAC)"
license = "MIT or APACHE-2.0"
repository = "https://github.com/quartiq/booster/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.4"
