[package]
name = "dac7571"
version = "0.1.0"
authors = ["Ryan Summers <ryan.summers@vertigo-designs.com>"]
edition = "2018"
description = "no_std driver for the DAC7571 external digital-to-analog converter (DAC)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/quartiq/booster/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.4"
