[package]
name = "max6639"
version = "0.1.0"
authors = ["Ryan Summers <ryan.summers@vertigo-designs.com>"]
edition = "2018"
description = "no_std driver for the MAX6639 fan speed controller"
license = "MIT"
repository = "https://github.com/quartiq/booster/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.4"
bit_field = "0.10.0"
