[package]
name = "smoltcp-mac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smoltcp-nal = "0.2"
heapless = "0.7"
cortex-m = { version = "0.7", optional = true }

[features]
default = []
cortex-m = ["dep:cortex-m"]
