[package]
name = "smoltcp-mac"
version = "0.1.0"
edition = "2021"
authors = [
	"Ryan Summers <ryan.summers@vertigo-designs.com>",
	"Robert Jördens <rj@quartiq.de>",
]
categories = ["embedded", "no-std", "hardware-support", "networking"]
keywords = ["ethernet", "smoltcp", "phy", "w5500", "mac"]
description = "Utility to safely enable Smoltcp on top of external Ethernet MACs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smoltcp-nal = "0.2"
heapless = "0.7"
cortex-m = { version = "0.7", optional = true }

[features]
default = []
cortex-m = ["dep:cortex-m"]
